// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Components/PdfViewer AutoFallback smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer ComparisonView smoke-test 1`] = `
<div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
  <div>
    <h3 class="text-lg font-semibold mb-4">
      Modal Version
    </h3>
    <div class="flex justify-center items-center h-64"
         id="_r_ID_"
         role="status"
         aria-live="polite"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
           aria-hidden="true"
      >
        <path d="M21 12a9 9 0 1 1-6.219-8.56">
        </path>
      </svg>
      <span class="sr-only">
        Loading…
      </span>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-semibold mb-4">
      Inline Version
    </h3>
    <div class="flex justify-center items-center h-64"
         id="_r_ID_"
         role="status"
         aria-live="polite"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
           aria-hidden="true"
      >
        <path d="M21 12a9 9 0 1 1-6.219-8.56">
        </path>
      </svg>
      <span class="sr-only">
        Loading…
      </span>
    </div>
  </div>
</div>
`;

exports[`Components/PdfViewer CustomLabels smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer Default smoke-test 1`] = `
<div class="flex flex-col"
     id="_r_ID_"
>
  <div data-slot="card"
       class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border shadow-sm transition-shadow py-3 cursor-pointer hover:shadow-md"
       role="button"
       tabindex="0"
  >
    <div data-slot="card-header"
         class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-0"
    >
      <div class="flex items-start justify-between">
        <div class="flex items-center gap-2">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="16"
               height="16"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-file-text text-muted-foreground"
               aria-hidden="true"
               id="FileText"
          >
            <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z">
            </path>
            <path d="M14 2v5a1 1 0 0 0 1 1h5">
            </path>
            <path d="M10 9H8">
            </path>
            <path d="M16 13H8">
            </path>
            <path d="M16 17H8">
            </path>
          </svg>
          <div data-slot="card-title"
               class="text-sm font-medium leading-tight"
          >
            FOS
          </div>
        </div>
        <div data-slot="badge"
             id="_r_ID_"
             class="inline-flex items-center justify-center rounded-full shadow-none border py-0.5 font-medium w-fit whitespace-nowrap shrink-0 gap-1 [&amp;&gt;svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-[color,box-shadow] overflow-hidden text-xs [&amp;&gt;svg]:size-2.5 text-destructive bg-destructive/10 border-destructive/10 px-3"
        >
          <div class="flex items-center">
            <div class>
              PDF
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/PdfViewer Inline smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer InlineWithoutCard smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer LargeHeightInline smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer LongTitle smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer MultipleDocuments smoke-test 1`] = `
<div class="space-y-6">
  <div>
    <h3 class="text-lg font-semibold mb-2">
      Modal Version
    </h3>
    <div class="flex justify-center items-center h-64"
         id="_r_ID_"
         role="status"
         aria-live="polite"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
           aria-hidden="true"
      >
        <path d="M21 12a9 9 0 1 1-6.219-8.56">
        </path>
      </svg>
      <span class="sr-only">
        Loading…
      </span>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-semibold mb-2">
      Technical Document
    </h3>
    <div class="flex justify-center items-center h-64"
         id="_r_ID_"
         role="status"
         aria-live="polite"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
           aria-hidden="true"
      >
        <path d="M21 12a9 9 0 1 1-6.219-8.56">
        </path>
      </svg>
      <span class="sr-only">
        Loading…
      </span>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-semibold mb-2">
      Long Title Document
    </h3>
    <div class="flex justify-center items-center h-64"
         id="_r_ID_"
         role="status"
         aria-live="polite"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
           aria-hidden="true"
      >
        <path d="M21 12a9 9 0 1 1-6.219-8.56">
        </path>
      </svg>
      <span class="sr-only">
        Loading…
      </span>
    </div>
  </div>
</div>
`;

exports[`Components/PdfViewer NativeViewer smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer SmallHeightInline smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer TechnicalDocument smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;
